# btviewer

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  unit-tests.yml
backend/: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
backend/btviewer/: README.md  __init__.py  __main__.py  app.py  app_factory.py  views.py
backend/btviewer/blueprints/: __init__.py
backend/btviewer/blueprints/frontend/: views.py
backend/btviewer/blueprints/index/: views.py
backend/btviewer/blueprints/label/: views.py
backend/btviewer/blueprints/photo/: model.py  views.py
backend/btviewer/blueprints/session/: model.py  models.py  views.py
backend/btviewer/blueprints/set/: models.py  views.py
backend/btviewer/static/: index.html
backend/docs/: requirement.txt
backend/tests/: README.md  conftest.py  test_session.py
backend/tests/data/2020-01-01/set_A/device_1/camera_1/: 20200101_094359.123456_000002.np
btviewer/: __init__.py
btviewer/blueprints1/: __init__.py
frontend/: CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.html
frontend/src/components/: CameraList.jsx  DeviceList.jsx  DrawMarker.jsx  DrawRetrodetectMarkers.jsx  DrawingExistingMarkers.jsx  DummyList.jsx  Heading.jsx  Image.css  Image.jsx  ImageTrial.css  ImageTrial.jsx  Instructions.jsx  Navigation.jsx  Nextbutton.jsx  PhotoList.jsx  PhotoSelection.jsx  SaveMarkers.jsx  SessionList.jsx  Sessions.jsx  SetList.jsx  ShowList.js  ShowList.jsx  button.jsx  utils.js
frontend/src/components/Tagging/: WriteTag.jsx
frontend/src/mockData/: RetrodetectOutput.js  mock_filename.json
scripts/: btnp.py
scripts/btnp/: requirements.txt
src/: __init__.py  run.py
src/btviewer/: __init__.py  __main__.py  route.py  utils.py
src/btviewer/templates/: index.html
