[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "btviewer"
version = "0.0.0"
dependencies = [
    "blinker>=1.7.0",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "Flask>=3.0.2",
    "Flask-Cors>=4.0.0",
    "itsdangerous>=2.1.2",
    "Jinja2>=3.1.3",
    "MarkupSafe>=2.1.5",
    "numpy>=1.26.4",
    "retrodetect>=0.0.2",
    "scipy>=1.12.0",
    "Werkzeug>=3.0.1"

]

requires-python = ">=3.8"
authors = [
    { name = "Mike Smith", email = "m.t.smith@sheffield.ac.uk" },
]
maintainers = [
    { name = "Mike Smith", email = "m.t.smith@sheffield.ac.uk" }
]
description = "Web app for human labelling of images of bee tracking"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["bee", "flask app", "small animals", "tracking"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.optional-dependencies]
test = [
    "flake8",
    'pytest',
    'opencv-python',
    'pandas'
]

[project.urls]
Homepage = "https://pypi.org/XXXX/"
#Bug_Tracker = "https://github.com/pypa/sampleproject/issues"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/SheffieldMLtracking/XXXX"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

#https://docs.pytest.org/en/8.0.x/reference/customize.html
[tool.pytest.ini_options]
pythonpath = ['src']
testpaths = ['tests']