[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btviewer"
version = "0.0.0"
dependencies = [
    "numpy",
    "scipy",
    "flask"
]
requires-python = ">=3.8"
authors = [
    { name = "Mike Smith", email = "m.t.smith@sheffield.ac.uk" },
]
maintainers = [
    { name = "Mike Smith", email = "m.t.smith@sheffield.ac.uk" }
]
description = "Web app for human labelling of tracking images"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["bee", "small animals", "tracking"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.optional-dependencies]
test = [
    "flake8",
    'pytest',
    'opencv-python',
    'pandas'
]

[project.urls]
Homepage = "https://pypi.org/project/btbiewer"
Bug_Tracker = "https://github.com/SheffieldMLtracking/btviewer/issues"
Documentation = "https://github.com/SheffieldMLtracking/btviewer/README.md"
Repository = "https://github.com/SheffieldMLtracking/btviewer"
Changelog = "https://github.com/SheffieldMLtracking/btviewer/blob/master/CHANGELOG.md"

#https://docs.pytest.org/en/8.0.x/reference/customize.html
[tool.pytest.ini_options]
pythonpath = ['btviewer']
testpaths = ['tests']
